Transferred import-export related preference pages to a separate group

--- a/src/Mod/Draft/Resources/ui/userprefs-import1.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-import1.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>DXF / DWG options</string>
+   <string>DXF / DWG</string>
   </property>
   <layout class="QVBoxLayout">
    <property name="spacing">
