--- a/src/Mod/Arch/Resources/ui/archprefs-import.ui
+++ b/src/Mod/Arch/Resources/ui/archprefs-import.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Import / export</string>
+   <string>IFC / DAE / WebGL</string>
   </property>
   <layout class="QVBoxLayout">
    <property name="spacing">
