--- a/src/Mod/PartDesign/Gui/TaskPolarPatternParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskPolarPatternParameters.ui
@@ -70,9 +70,12 @@
       </widget>
      </item>
      <item>
-      <widget class="QDoubleSpinBox" name="spinAngle">
-       <property name="decimals">
-        <number>2</number>
+      <widget class="Gui::QuantitySpinBox" name="polarAngle">
+       <property name="unit" stdset="0">
+        <string>deg</string>
+       </property>
+       <property name="minimum">
+        <double>0.000000000000000</double>
        </property>
        <property name="maximum">
         <double>360.000000000000000</double>
@@ -141,6 +144,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Gui::QuantitySpinBox</class>
+   <extends>QWidget</extends>
+   <header>Gui/QuantitySpinBox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
