--- a/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
+++ b/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
@@ -94,6 +94,7 @@
         <file>icons/small/Constraint_PointOnStart_sm.xpm</file>
         <file>icons/small/Constraint_PointToObject_sm.xpm</file>
         <file>icons/small/Constraint_Radius_sm.xpm</file>
+        <file>icons/small/Constraint_Symmetric.svg.zip</file>
         <file>icons/small/Constraint_Symmetric_sm.xpm</file>
         <file>icons/small/Constraint_TangentToEnd_sm.xpm</file>
         <file>icons/small/Constraint_TangentToStart_sm.xpm</file>
