+ do not add units to translation

--- a/src/Mod/PartDesign/Gui/TaskPolarPatternParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskPolarPatternParameters.ui
@@ -72,7 +72,7 @@
      <item>
       <widget class="Gui::QuantitySpinBox" name="polarAngle">
        <property name="unit" stdset="0">
-        <string>deg</string>
+        <string notr="true">deg</string>
        </property>
        <property name="minimum">
         <double>0.000000000000000</double>
