--- a/src/Mod/PartDesign/Gui/TaskLinearPatternParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskLinearPatternParameters.ui
@@ -77,7 +77,7 @@
      <item>
       <widget class="Gui::QuantitySpinBox" name="spinLength">
        <property name="unit" stdset="0">
-        <string>mm</string>
+        <string notr="true">mm</string>
        </property>
        <property name="value">
         <double>100.000000000000000</double>
