--- a/src/Mod/PartDesign/Gui/TaskRevolutionParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskRevolutionParameters.ui
@@ -51,7 +51,7 @@
      <item>
       <widget class="Gui::QuantitySpinBox" name="revolveAngle">
        <property name="unit" stdset="0">
-        <string>deg</string>
+        <string notr="true">deg</string>
        </property>
        <property name="minimum">
         <double>0.000000000000000</double>
