--- a/src/Mod/Part/Gui/DlgImportExportIges.ui
+++ b/src/Mod/Part/Gui/DlgImportExportIges.ui
@@ -85,25 +85,25 @@
       <item row="0" column="1">
        <widget class="QLineEdit" name="lineEditCompany"/>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Product</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="2" column="1">
        <widget class="QLineEdit" name="lineEditProduct"/>
       </item>
-      <item row="2" column="0">
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="lineEditAuthor"/>
+      </item>
+      <item row="1" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string>Author</string>
         </property>
        </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="QLineEdit" name="lineEditAuthor"/>
       </item>
      </layout>
     </widget>
@@ -123,6 +123,13 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>comboBoxUnits</tabstop>
+  <tabstop>checkBrepMode</tabstop>
+  <tabstop>lineEditCompany</tabstop>
+  <tabstop>lineEditAuthor</tabstop>
+  <tabstop>lineEditProduct</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
