--- a/src/Mod/Part/Gui/DlgImportExportStep.ui
+++ b/src/Mod/Part/Gui/DlgImportExportStep.ui
@@ -13,13 +13,13 @@
   <property name="windowTitle">
    <string>STEP</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_3">
+  <layout class="QGridLayout" name="gridLayout_4">
    <item row="0" column="0">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Export</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
+     <layout class="QGridLayout" name="gridLayout_3">
       <item row="0" column="0">
        <widget class="QLabel" name="label">
         <property name="text">
@@ -57,6 +57,32 @@
           <string>Inch</string>
          </property>
         </item>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="3">
+       <widget class="QGroupBox" name="groupBox_2">
+        <property name="title">
+         <string>Scheme</string>
+        </property>
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0">
+          <widget class="QRadioButton" name="radioButtonAP203">
+           <property name="text">
+            <string notr="true">AP 203</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QRadioButton" name="radioButtonAP214">
+           <property name="text">
+            <string notr="true">AP 214</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
      </layout>
@@ -116,6 +142,14 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>comboBoxUnits</tabstop>
+  <tabstop>radioButtonAP203</tabstop>
+  <tabstop>radioButtonAP214</tabstop>
+  <tabstop>lineEditCompany</tabstop>
+  <tabstop>lineEditAuthor</tabstop>
+  <tabstop>lineEditProduct</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
