+ 0001849: Enable Spin Boxes support for Pad, Fillet and Chamfer

--- a/src/Mod/PartDesign/Gui/TaskChamferParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskChamferParameters.ui
@@ -24,7 +24,7 @@
       </widget>
      </item>
      <item>
-      <widget class="Gui::InputField" name="chamferDistance"/>
+      <widget class="Gui::QuantitySpinBox" name="chamferDistance"/>
      </item>
     </layout>
    </item>
@@ -32,9 +32,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>Gui::InputField</class>
-   <extends>QLineEdit</extends>
-   <header>Gui/InputField.h</header>
+   <class>Gui::QuantitySpinBox</class>
+   <extends>QWidget</extends>
+   <header>Gui/QuantitySpinBox.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
