--- a/src/Mod/PartDesign/Gui/TaskPadParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskPadParameters.ui
@@ -44,7 +44,7 @@
       </widget>
      </item>
      <item>
-      <widget class="Gui::InputField" name="lengthEdit">
+      <widget class="Gui::PrefQuantitySpinBox" name="lengthEdit">
        <property name="minimum">
         <double>0.000000000000000</double>
        </property>
@@ -88,7 +88,7 @@
       </widget>
      </item>
      <item>
-      <widget class="Gui::InputField" name="lengthEdit2">
+      <widget class="Gui::PrefQuantitySpinBox" name="lengthEdit2">
        <property name="minimum">
         <double>0.000000000000000</double>
        </property>
@@ -141,9 +141,9 @@
  <resources/>
  <customwidgets>
    <customwidget>
-     <class>Gui::InputField</class>
-     <extends>QLineEdit</extends>
-     <header>Gui/InputField.h</header>
+     <class>Gui::PrefQuantitySpinBox</class>
+     <extends>QWidget</extends>
+     <header>Gui/PrefWidgets.h</header>
    </customwidget>
  </customwidgets>
  <connections/>
