--- a/src/Mod/Fem/Gui/Resources/Fem.qrc
+++ b/src/Mod/Fem/Gui/Resources/Fem.qrc
@@ -11,6 +11,7 @@
         <file>icons/Fem_AddFemMesh.svg</file>
         <file>icons/Fem_AddMaterial.svg</file>
         <file>icons/Fem_AddPart.svg</file>
+        <file>icons/Fem_Inp_Editor.svg</file>
         <file>icons/Fem_Material.svg</file>
         <file>icons/Fem_NewAnalysis.svg</file>
         <file>icons/Fem_Result.svg</file>
