--- a/src/Mod/Fem/Gui/Resources/Fem.qrc
+++ b/src/Mod/Fem/Gui/Resources/Fem.qrc
@@ -17,6 +17,7 @@
         <file>icons/Fem_Result.svg</file>
         <file>icons/Fem_ResultDisplacement.svg</file>
         <file>icons/Fem_ResultStress.svg</file>
+        <file>icons/preferences-fem.svg</file>
         <file>translations/Fem_af.qm</file>
         <file>translations/Fem_de.qm</file>
         <file>translations/Fem_fi.qm</file> 
