FEM: Change Young's modulus limit
2000 was way too low and it was causing some unxepected behaviour for
Young's modulud over 2000 kPa

Signed-off-by: Przemo Firszt <przemo@firszt.eu>

--- a/src/Mod/Fem/MechanicalMaterial.ui
+++ b/src/Mod/Fem/MechanicalMaterial.ui
@@ -67,7 +67,7 @@
         <number>3</number>
        </property>
        <property name="maximum" stdset="0">
-        <double>2000.000000000000000</double>
+        <double>2000000000.000000000</double>
        </property>
        <property name="singleStep" stdset="0">
         <double>2.000000000000000</double>
